<resources>
    <string name="app_name">EcoLog</string>
    <string name="ButtonContinue">Продолжить</string>
    <string name="ButtonConfirm">Подтвердить</string>
    <string name="ButtonRecalculate">Пересчитать</string>
    <string name="ButtonMainMenu">Меню</string>
    <string name="ButtonEnter">Войти</string>
    <string name="ButtonRegistration">Регистрация</string>
    <string name="EditEmail">Введите Email</string>
    <string name="EditPassword">Введите пароль</string>
    <string name="EditName">Введите имя</string>
    <string name="EditTele">Введите номер телефона</string>
    <string name="MenuSLed">Ваш углеродный след за последний месяц составил:</string>
    <string name="MenuRec">Предлагаем вам советы, чтобы поддерживать или улучшить данный уровень:</string>
    <string name="ButtonSovet">Рекомендации</string>
    <string name="Splash1">Приветствую вас в нашем приложении Ecolog!</string>
    <string name="Splash2">Давайте вместе сделаем шаг к более устойчивому будущему! Начнем свой путь к более экологичной жизни.</string>
    <string name="Text_4">Теперь перейдем к расчету для вашего личного автомобиля:</string>

    <string name="TextPresentable">Добро пожаловать в EcoLog!!!!</string>
    <string name="Text_Third">Для начала давайте рассчитаем ваше потребление по коммунальным услугам, для этого введите следующие данные:</string>

    <string name="Text_Resolve">Сумма ваших выбросов CO2 в тоннах:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string-array name="family_members_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>






</resources>