<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="308dp"
        android:layout_height="302dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditEmail"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditPassword"
                android:inputType="text"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditName"
                android:inputType="text"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PhoneField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditTele"
                android:inputType="number"
                android:textSize="20sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>